--- a/index.html
+++ b/index.html
@@ -145,6 +145,9 @@
                         <div id="aiOutput" class="ai-response text-sm text-gray-300 leading-relaxed overflow-y-auto flex-grow prose prose-invert max-w-none">
                             <p class="text-gray-600 italic">Select a tool on the left to get started. I know your diet targets (3986kcal) and schedule.</p>
                         </div>
+                        <div class="mt-2 text-right">
+                             <button onclick="clearKey()" class="text-[10px] text-gray-600 hover:text-red-400 underline">Reset API Key</button>
+                        </div>
                     </div>
                 </div>
             </section>
@@ -278,18 +281,50 @@
     <!-- Gemini API Logic -->
     <script>
         // API Configuration
-        const apiKey = ""; // Set by environment
+        // Note: On GitHub Pages/Static hosting, the environment variable won't exist.
+        // We will prompt the user for their key if this is empty.
+        let apiKey = ""; 
+
         const systemPrompt = "You are an elite sports nutrition coach for Myles, a rugby player. His targets are: 3986 kcal, 557g Carbs, 190g Protein, 111g Fat. His match day is Wednesday. His intense training day is Friday. He follows an 80/20 rule (80% whole food). Be concise, motivational, and practical. Use markdown formatting.";
+
+        async function getApiKey() {
+            // 1. Check if hardcoded (dev env)
+            if (apiKey) return apiKey;
+
+            // 2. Check local storage (user entered previously)
+            const storedKey = localStorage.getItem('myles_gemini_key');
+            if (storedKey) return storedKey;
+
+            // 3. Prompt user
+            const userKey = prompt("To use the AI Coach features, please enter your Gemini API Key:\n(It will be saved locally on your device only)");
+            
+            if (userKey) {
+                localStorage.setItem('myles_gemini_key', userKey);
+                return userKey;
+            }
+            return null;
+        }
+
+        function clearKey() {
+            localStorage.removeItem('myles_gemini_key');
+            alert("API Key removed.");
+        }
 
         async function callGemini(userPrompt) {
             const outputDiv = document.getElementById('aiOutput');
             const loader = document.getElementById('loadingIndicator');
             
+            const key = await getApiKey();
+            if (!key) {
+                outputDiv.innerHTML = `<span class="text-yellow-500">API Key required. Please reload or click a tool to enter it.</span>`;
+                return;
+            }
+
             outputDiv.innerHTML = '';
             loader.classList.remove('hidden');
 
             try {
-                const response = await fetch(`https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash-preview-09-2025:generateContent?key=${apiKey}`, {
+                const response = await fetch(`https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash-preview-09-2025:generateContent?key=${key}`, {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json'
@@ -304,7 +339,13 @@
                     })
                 });
 
-                if (!response.ok) throw new Error('API call failed');
+                if (!response.ok) {
+                     if (response.status === 400 || response.status === 403) {
+                        localStorage.removeItem('myles_gemini_key'); // Clear bad key
+                        throw new Error('Invalid API Key. Please try again.');
+                     }
+                    throw new Error('API call failed');
+                }
 
                 const data = await response.json();
                 const text = data.candidates?.[0]?.content?.parts?.[0]?.text || "Sorry, I couldn't generate a response.";
@@ -314,7 +355,7 @@
 
             } catch (error) {
                 console.error(error);
-                outputDiv.innerHTML = `<span class="text-red-400">Error: Could not connect to Coach. Please try again.</span>`;
+                outputDiv.innerHTML = `<span class="text-red-400">Error: ${error.message}</span>`;
             } finally {
                 loader.classList.add('hidden');
             }
@@ -322,7 +363,10 @@
 
         function runMealSwap() {
             const input = document.getElementById('swapInput').value;
-            if (!input) return;
+            if (!input) {
+                alert("Please enter a food to swap.");
+                return;
+            }
             const prompt = `Myles needs to swap "${input}" for something else. Suggest 2 alternatives that have similar macronutrients (Protein/Carb/Fat content) to ensure he hits his 4000kcal target. Keep it simple.`;
             callGemini(prompt);
         }
@@ -334,7 +378,10 @@
 
         function runRecipe() {
             const input = document.getElementById('recipeInput').value;
-            if (!input) return;
+            if (!input) {
+                 alert("Please enter ingredients.");
+                 return;
+            }
             const prompt = `Myles has these ingredients: "${input}". Create a high-calorie (approx 800-1000kcal) meal recipe using these and basic pantry staples to help him reach his daily goals. List macros roughly.`;
             callGemini(prompt);
         }
